--- a/style.css
+++ b/style.css
@@ -265,6 +265,10 @@ li.order > button:active {
     background-color: #a41b15;
     opacity: 0.8;
 }
+.bordered{
+    border: 2px dotted #ad1e17;
+    border-radius: 50%;
+}
 section.reviews{
     width: 100%;
     height: 500px;
@@ -304,6 +308,7 @@ section.reviews > .svg{
     display: block;
     width: 280px;
     margin-top: 5px;
+    display: none;
 }
 .who > .signature{
     color: #000000;
